--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
     <title>Welcome to Open Source Git Lecture</title>
   </head>
   <body>
-    <p>Hello world! Correct at USER Yerim!</p>
+    <p>Hello world! Correct at USER BKBKBK!</p>
 </body>
 </html>
